--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -32,8 +32,8 @@
             <td>E-mail</td>
             <td>
                 <div class="form-floating">
-                    <input asp-for="Input.MobilePhone" class="form" autocomplete="mobilephone" aria-required="true" />
-                    <span asp-validation-for="Input.MobilePhone" class="text-danger"></span>
+                    <input asp-for="Input.Email" class="form" autocomplete="email" aria-required="true" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
             </td>
         </tr>
@@ -50,7 +50,7 @@
             <td>Password</td>
             <td>
                 <div class="form-floating">
-                    <input asp-for="Input.Password" class="form" autocomplete="new-password" aria-required="true" />
+                    <input asp-for="Input.Password" type="password" class="form" autocomplete="new-password" aria-required="true" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
             </td>
@@ -61,7 +61,6 @@
             </td>
         </tr>
     </table>
-
 </form>
 
 @section Scripts {
